[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Free"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-admin = "^2.0.2"
django = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
